test/compile_fail/adding_int_and_string.pine
def main do
  5 + "not an int" # error: failed to unify
end
